Change context path view and logic
Create ContextPathRenderer and redesign the method
add multiSource for Duplicates
Delete startDestPath and startSourcePath and add the choosen paths
directly to the preferences